--- a/FunctionApp1.Tests/FunctionApp1.Tests.csproj
+++ b/FunctionApp1.Tests/FunctionApp1.Tests.csproj
@@ -30,6 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ClassLibrary1\ClassLibrary1.csproj" />
     <ProjectReference Include="..\FunctionApp1\FunctionApp1.csproj" />
   </ItemGroup>
 
